Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job__c/Job__c.object-meta.xml
<CustomObject>
    <description>A custom object to store jobs</description>
    <label>Job</label>
    <nameField>
        <displayFormat>Job-{0000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>