Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>A text field to store the job company</description>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>