Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>A text field to store the job Id</description>
    <externalId>true</externalId>
    <label>Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>