Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>A URL field to store the job link</description>
    <label>Link</label>
    <type>Url</type>
</CustomField>