Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>A text field to store the job location</description>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>