Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>A text field to store the job salary</description>
    <label>Salary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>