Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job__c/fields/Snippet__c.field-meta.xml
<CustomField>
    <fullName>Snippet__c</fullName>
    <description>A long text area field to store the job snippet</description>
    <label>Snippet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>