Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>A URL field to store the job source</description>
    <label>Source</label>
    <type>Url</type>
</CustomField>