Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>A text field to store the job title</description>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>