Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>A text field to store the job type</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>