Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <description>A datetime field to store the date and time the job was last updated</description>
    <label>Updated</label>
    <type>DateTime</type>
</CustomField>